# hs-minecraft-data

./: .gitignore  .gitmodules  .travis.yml  README.md  gen.hs  hs-minecraft-data.cabal  minecraft-data.cabal  stack.yaml
generate/: gen.hs  generate.cabal
generate/src/: Generator.hs
generate/src/Generator/: Parser.hs
generate/src/Generator/Parser/: Biomes.hs  Blocks.hs  Effects.hs  Entities.hs  Instruments.hs  Items.hs  Materials.hs  Recipes.hs  Versions.hs  Windows.hs
src/Data/: Minecraft.hs
src/Data/Minecraft/: Classic.hs  Common.hs  LatestSnapshot.hs  Release17.hs  Release18.hs  Release19.hs
src/Data/Minecraft/Classic/: Protocol.hs  Version.hs
src/Data/Minecraft/Common/: ProtocolVersions.hs  Versions.hs
src/Data/Minecraft/LatestSnapshot/: Biomes.hs  Blocks.hs  Effects.hs  Entities.hs  Instruments.hs  Items.hs  Materials.hs  Protocol.hs  Version.hs  Windows.hs
src/Data/Minecraft/Release17/: Biomes.hs  Blocks.hs  Effects.hs  Entities.hs  Instruments.hs  Items.hs  Materials.hs  Protocol.hs  Version.hs  Windows.hs
src/Data/Minecraft/Release18/: Biomes.hs  Blocks.hs  Effects.hs  Entities.hs  Instruments.hs  Items.hs  Materials.hs  Protocol.hs  Version.hs  Windows.hs
src/Data/Minecraft/Release19/: Biomes.hs  Blocks.hs  Effects.hs  Entities.hs  Instruments.hs  Items.hs  Materials.hs  Protocol.hs  Version.hs  Windows.hs
