name:                 generate
version:              0.1.0.0
synopsis:             A wrapper for the minecraft-data module
description:          Please see README.md
homepage:             https://github.com/oldmanmike/hs-minecraft-data/generate
bug-reports:          https://github.com/oldmanmike/hs-minecraft-data/issues
license:              BSD3
license-file:         LICENSE
author:               Michael Carpenter
maintainer:           mcarpenter.dev@gmail.com <oldmanmike.dev@gmail.com>
copyright:            2016 (C) 2016 Michael Carpenter
category:             Data,Game
build-type:           Simple
extra-source-files:   README.md, LICENSE
cabal-version:        >=1.10

executable gen
  main-is:              gen.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        aeson,
                        base,
                        bytestring,
                        containers,
                        split
  default-language:     Haskell2010

test-suite hs-minecraft-data-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/hs-minecraft-data/generate
